WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154159
[GTK] HTTP auth dialog incorrectly rendered with Accelerated Compositing enabled
https://bugs.webkit.org/show_bug.cgi?id=154159
Summary
[GTK] HTTP auth dialog incorrectly rendered with Accelerated Compositing enabled
Carlos Garcia Campos
Reported
2016-02-12 01:01:33 PST
It's blurry, the check button is rendered as a black box, there are some black borders around entries and button, and the web view background gray effect doesn't work either.
Attachments
Patch
(3.57 KB, patch)
2016-02-12 02:57 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-02-12 01:48:09 PST
I still don't know what the problem is, but I'm thinking that maybe we could convert the HTTP auth dialog into a PageOverlay.
Carlos Garcia Campos
Comment 2
2016-02-12 01:55:57 PST
I've just realized that this is not a problem of the threaded compositor, but exactly the same happens if you run without threaded compositor but forxing AC mode always on (WEBKIT_FORCE_COMPOSITING_MODE). So, is the threaded compositor forcing AC mode always?
Carlos Garcia Campos
Comment 3
2016-02-12 02:55:32 PST
There are two problems here, first we are changing the cairo operator when rendering the xcomposite window pixmap without a proper save/restore, so it affects the drawing that happens after that, and second problem is tyhat we are not rendering the gray background in AC mode. I'll submit a patch.
Carlos Garcia Campos
Comment 4
2016-02-12 02:57:23 PST
Created
attachment 271156
[details]
Patch
WebKit Commit Bot
Comment 5
2016-02-12 02:59:17 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Gwang Yoon Hwang
Comment 6
2016-02-12 03:06:38 PST
Comment on
attachment 271156
[details]
Patch I love this patch :).
Michael Catanzaro
Comment 7
2016-02-12 08:00:52 PST
Comment on
attachment 271156
[details]
Patch rs=me with Yoon's approval
Carlos Garcia Campos
Comment 8
2016-02-12 08:40:23 PST
Committed
r196475
: <
http://trac.webkit.org/changeset/196475
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug