[GTK] HTTP auth dialog incorrectly rendered with Accelerated Compositing enabled https://bugs.webkit.org/show_bug.cgi?id=154159

Reviewed by Michael Catanzaro.

There are two problems here, first we are changing the cairo
operator when rendering the xcomposite window pixmap without a
proper save/restore, so it affects the drawing that happens after
that, and second problem is that we are not rendering the gray
background in AC mode because we are returning earlier.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewRenderAcceleratedCompositingResults):
(webkitWebViewBaseDraw):

Canonical link: https://commits.webkit.org/172262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196475 268f45cc-cd09-0410-ab3c-d52691b4dbfc